@@ -1,3 +1,14 @@
+2010-03-10  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Add parameters to CFSQP solver.
+	* src/ofsqp.hh: Make parameters public attributes.
+	* src/roboptim-core-cfsqp-plugin.cc: Add additional parameters.
+	* tests/optimization-problem-1.stdout,
+	* tests/plugin.stdout,
+	* tests/simple-1.stdout,
+	* tests/simple-2.stdout,
+	* tests/simple.stdout: Regenerate.
+
 2010-03-05  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Tag internal function as ROBOPTIM_DLLLOCAL.
